Primera versión nuevo menú realizada

--- a/ProyectoBiblioteca/ProyectoBiblioteca.csproj
+++ b/ProyectoBiblioteca/ProyectoBiblioteca.csproj
@@ -70,9 +70,6 @@
     <Compile Include="AgregarUsuarioVentana.xaml.cs">
       <DependentUpon>AgregarUsuarioVentana.xaml</DependentUpon>
     </Compile>
-    <Compile Include="UsuariosVentana.xaml.cs">
-      <DependentUpon>UsuariosVentana.xaml</DependentUpon>
-    </Compile>
     <Page Include="AgregarUsuarioVentana.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -89,9 +86,9 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="UsuariosVentana.xaml">
-      <SubType>Designer</SubType>
+    <Page Include="Themes\Generic.xaml">
       <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
   <ItemGroup>
@@ -128,6 +125,7 @@
     <Compile Include="Model\Usuarios.cs">
       <DependentUpon>BibliotecaModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="NavButton.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
