--- a/ProyectoBiblioteca/ProyectoBiblioteca.csproj
+++ b/ProyectoBiblioteca/ProyectoBiblioteca.csproj
@@ -86,6 +86,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Pages\VentanaInventario.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Themes\Generic.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -126,6 +130,9 @@
       <DependentUpon>BibliotecaModel.tt</DependentUpon>
     </Compile>
     <Compile Include="NavButton.cs" />
+    <Compile Include="Pages\VentanaInventario.xaml.cs">
+      <DependentUpon>VentanaInventario.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -167,6 +174,12 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Resource Include="Images\Icons\buscar.png" />
+    <Resource Include="Images\Icons\catalogo.png" />
+    <Resource Include="Images\Icons\documento.png" />
+    <Resource Include="Images\Icons\prestamo.png" />
+    <Resource Include="Images\Icons\usuarios.png" />
+    <Resource Include="Images\Icons\caja.png" />
     <Content Include="Model\BibliotecaModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>BibliotecaModel.edmx</DependentUpon>
