--- a/ProyectoBiblioteca/ProyectoBiblioteca.csproj
+++ b/ProyectoBiblioteca/ProyectoBiblioteca.csproj
@@ -174,12 +174,11 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Resource Include="Images\Icons\buscar.png" />
+    <Resource Include="Images\Icons\users.png" />
+    <Resource Include="Images\Icons\prestar.png" />
     <Resource Include="Images\Icons\catalogo.png" />
-    <Resource Include="Images\Icons\documento.png" />
-    <Resource Include="Images\Icons\prestamo.png" />
-    <Resource Include="Images\Icons\usuarios.png" />
-    <Resource Include="Images\Icons\caja.png" />
+    <Resource Include="Images\Icons\stock.png" />
+    <Resource Include="Images\Icons\informe.png" />
     <Content Include="Model\BibliotecaModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>BibliotecaModel.edmx</DependentUpon>
