--- a/ProyectoBiblioteca/ProyectoBiblioteca.csproj
+++ b/ProyectoBiblioteca/ProyectoBiblioteca.csproj
@@ -86,7 +86,7 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Pages\VentanaInventario.xaml">
+    <Page Include="Pages\VentanaCatalogo.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -130,8 +130,8 @@
       <DependentUpon>BibliotecaModel.tt</DependentUpon>
     </Compile>
     <Compile Include="NavButton.cs" />
-    <Compile Include="Pages\VentanaInventario.xaml.cs">
-      <DependentUpon>VentanaInventario.xaml</DependentUpon>
+    <Compile Include="Pages\VentanaCatalogo.xaml.cs">
+      <DependentUpon>VentanaCatalogo.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
