--- a/ProyectoBiblioteca/ProyectoBiblioteca.csproj
+++ b/ProyectoBiblioteca/ProyectoBiblioteca.csproj
@@ -258,6 +258,7 @@
     <Resource Include="Images\Icons\informe.png" />
     <Resource Include="Images\Icons\sancion.png" />
     <Resource Include="Images\Icons\refresh.png" />
+    <Resource Include="Images\Icons\flecha.png" />
     <Content Include="Model\BibliotecaModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>BibliotecaModel.edmx</DependentUpon>
